# p2p-perf-eval

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
experiments/: simple.py
go-p2p/: Dockerfile  api.go  flake.nix  go.mod  go.sum  main.go
p2p/: flake.nix  p2p.nimble  p2p_node.nim
src/: __init__.py  const.py  main.py  mesh.py  utils.py
