[project]
name = "p2p-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
